apps/hello-chant/k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-chant
  labels:
    app.kubernetes.io/name: hello-chant
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`hello-chant.inevitable.fyi`)"
      kind: Rule
      services:
        - name: hello-chant
          port: 80
  tls:
    secretName: hello-chant-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-chant-http
  labels:
    app.kubernetes.io/name: hello-chant
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`hello-chant.inevitable.fyi`)"
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: hello-chant
          port: 80
