apps/hello-chant/k8s/manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-chant
  labels:
    app.kubernetes.io/name: hello-chant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-chant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-chant
    spec:
      containers:
        - name: app
          image: nginxdemos/hello:0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: '10m'
              memory: '32Mi'
            limits:
              cpu: '100m'
              memory: '64Mi'
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-chant
  labels:
    app.kubernetes.io/name: hello-chant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hello-chant.inevitable.fyi`)
      kind: Rule
      services:
        - name: hello-chant
          port: 80
  tls:
    secretName: hello-chant-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-chant-http
  labels:
    app.kubernetes.io/name: hello-chant
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hello-chant.inevitable.fyi`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: hello-chant
          port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hello-chant
  labels:
    app.kubernetes.io/name: hello-chant
  annotations:
    tailscale.com/expose: 'true'
    tailscale.com/hostname: hello-chant
spec:
  selector:
    app.kubernetes.io/name: hello-chant
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
